fix: cta buttons

--- a/public/index.html
+++ b/public/index.html
@@ -73,12 +73,12 @@
         Greek characters during a lecture. With EduAble, you can spend your time engaging with the material, not fighting with your keyboard.
       </p>
       <div class="font-montserrat">
-        <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2">
-          <a href="https://edu-able.vercel.app">Try now</a>
-        </button>
-        <button class="px-6 py-4 border-2 border-black border-solid rounded-lg">
-          <a href="#howitworks">Learn more</a>
-        </button>
+        <a class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-4 mb-4" href="https://edu-able.vercel.app">
+          Try now
+        </a>
+        <a class="px-6 py-4 border-2 border-black border-solid rounded-lg" href="#howitworks">
+          Learn more
+        </a>
       </div>
     </div>
     <div class="flex justify-around md:block mt-8 md:mt-0 md:flex-1">
@@ -201,9 +201,9 @@
           <p>Limited AI usage</p>
         </div>
 
-        <button class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-16">
-          <a href="https://edu-able.vercel.app">Try now</a>
-        </button>
+        <a href="https://edu-able.vercel.app" class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-16 text-center">
+          Try now
+        </a>
       </div>
 
       <!-- <div class='flex-1 flex flex-col mx-6 shadow-2xl relative bg-secondary rounded-2xl py-5 px-8 my-8 md:top-12'>
@@ -263,9 +263,9 @@
           <p>Personalized features</p> 
         </div>
 
-        <button class=" border-2 border-solid border-black rounded-xl text-lg py-3 mt-4">
+        <a href="#" class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-4 text-center">
           Coming soon
-        </button>
+        </a>
       </div>
 
     </div>
