--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
     </ul>
     <div class="font-montserrat hidden md:block">
       <button class="mr-6">
-        <a href="https://edu-able.vercel.app/login">Login</a>
+        <a href="https://notes.eduable.app/login">Login</a>
       </button>
       <button class="py-2 px-4 text-white bg-black rounded-3xl">
-        <a href="https://edu-able.vercel.app/register">Signup</a>
+        <a href="https://notes.eduable.app/register">Signup</a>
       </button>
     </div>
     <div id="showMenu" class="md:hidden">
