--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         Greek characters during a lecture. With EduAble, you can spend your time engaging with the material, not fighting with your keyboard.
       </p>
       <div class="font-montserrat">
-        <a class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-4 mb-4" href="https://edu-able.vercel.app">
+        <a class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-4 mb-4" href="https://notes.eduable.app">
           Try now
         </a>
         <a class="px-6 py-4 border-2 border-black border-solid rounded-lg" href="#howitworks">
@@ -166,7 +166,7 @@
     <div>
       <p class="text-center font-montserrat">
         EduAble was created by students, for students. We know that note-taking is hard, and no app can be perfect.
-        We would love to hear your thoughts on how note-taking can be made better &mdash; <a href="mailto:zz513-eduable@srcf.net" class="underline">drop us a line</a> 
+        We would love to hear your thoughts on how note-taking can be made better &mdash; <a href="mailto:zayne@eduable.app" class="underline">drop us a line</a> 
         and we'd love to add your ideas to our roadmap.
       </p>
     </div>
@@ -201,7 +201,7 @@
           <p>Limited AI usage</p>
         </div>
 
-        <a href="https://edu-able.vercel.app" class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-16 text-center">
+        <a href="https://notes.eduable.app" class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-16 text-center">
           Try now
         </a>
       </div>
